--- a/roles/database/defaults/main.yml
+++ b/roles/database/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # defaults file for myorg.custom_collection.database
-db_server_name: "webapp_prod"
-db_server_user: "webapp_user"
-db_server_password: "SecurePassword123"
+database_server_name: "webapp_prod"
+database_server_user: "webapp_user"
+database_server_password: "SecurePassword123"
 ...
