--- a/.tekton/build-and-test.yml
+++ b/.tekton/build-and-test.yml
@@ -58,4 +58,4 @@ spec:
         - name: collection-bundle
           value: $(tasks.ansible-galaxy-collection-build.results.collection-bundle)
         - name: molecule-scenario
-          value: "magic"
+          value: "database"
