--- a/extensions/molecule/utils/kubernetes-pod/playbooks/cleanup.yml
+++ b/extensions/molecule/utils/kubernetes-pod/playbooks/cleanup.yml
@@ -8,8 +8,7 @@
     # Developer must implement.
 
     - name: Destroy molecule containers
-      community.okd.k8s:
-        kubeconfig: "{{ lookup('ansible.builtin.env', 'HOME') }}/.kube/config"
+      kubernetes.core.k8s:
         state: absent
         definition: "{{ lookup('template', 'templates/deployment.yml') | from_yaml }}"
         wait: true
