--- a/extensions/molecule/utils/kubernetes-pod/playbooks/templates/deployment.yml
+++ b/extensions/molecule/utils/kubernetes-pod/playbooks/templates/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: "{{ item.name }}"
-  namespace: "{{ backup_file_molecule_namespace }}"
+  namespace: "{{ item.namespace }}"
   labels:
     app: "molecule-test-container"
 spec:
