--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,118 +1,24 @@
 {
-  "name": "Ansible Collection Development",
-  "image": "quay.io/ansible/creator-ee:latest",
-  
-  "features": {
-    "ghcr.io/devcontainers/features/python:1": {
-      "version": "3.11"
-    },
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {
-      "version": "latest",
-      "moby": true
-    },
-    "ghcr.io/devcontainers/features/git:1": {
-      "version": "latest"
-    },
-    "ghcr.io/devcontainers/features/common-utils:2": {
-      "installZsh": true,
-      "installOhMyZsh": true,
-      "upgradePackages": true
-    }
-  },
-
+  "name": "ansible-dev-container-codespaces",
+  "image": "ghcr.io/ansible/community-ansible-dev-tools:latest",
+  "containerUser": "root",
+  "runArgs": [
+    "--security-opt",
+    "seccomp=unconfined",
+    "--security-opt",
+    "label=disable",
+    "--cap-add=SYS_ADMIN",
+    "--cap-add=SYS_RESOURCE",
+    "--device",
+    "/dev/fuse",
+    "--security-opt",
+    "apparmor=unconfined",
+    "--hostname=ansible-dev-container"
+  ],
+  "updateRemoteUserUID": true,
   "customizations": {
     "vscode": {
-      "extensions": [
-        "redhat.ansible",
-        "redhat.vscode-yaml",
-        "ms-python.python",
-        "ms-python.vscode-pylance",
-        "ms-python.black-formatter",
-        "ms-python.isort",
-        "ms-python.flake8",
-        "charliermarsh.ruff",
-        "GitHub.copilot",
-        "GitHub.copilot-chat",
-        "eamodio.gitlens",
-        "EditorConfig.EditorConfig",
-        "wholroyd.jinja",
-        "donjayamanne.python-extension-pack",
-        "ms-vscode.makefile-tools"
-      ],
-      "settings": {
-        "ansible.ansible.path": "/usr/local/bin/ansible",
-        "ansible.python.interpreterPath": "/usr/bin/python3",
-        "ansible.validation.enabled": true,
-        "ansible.validation.lint.enabled": true,
-        "ansible.validation.lint.path": "/usr/local/bin/ansible-lint",
-        "ansible.executionEnvironment.enabled": false,
-        "python.defaultInterpreterPath": "/usr/bin/python3",
-        "python.linting.enabled": true,
-        "python.linting.pylintEnabled": true,
-        "python.linting.flake8Enabled": true,
-        "python.linting.banditEnabled": true,
-        "python.formatting.provider": "black",
-        "python.testing.pytestEnabled": true,
-        "python.testing.unittestEnabled": false,
-        "python.testing.pytestArgs": [
-          "tests"
-        ],
-        "yaml.schemas": {
-          "https://raw.githubusercontent.com/ansible/schemas/main/f/ansible.json": [
-            "roles/*/tasks/*.yml",
-            "roles/*/handlers/*.yml",
-            "playbooks/*.yml"
-          ]
-        },
-        "yaml.format.enable": true,
-        "yaml.validate": true,
-        "files.associations": {
-          "*.yml": "ansible",
-          "*.yaml": "ansible",
-          "**/roles/**/tasks/*.yml": "ansible",
-          "**/roles/**/handlers/*.yml": "ansible",
-          "**/molecule/**/converge.yml": "ansible",
-          "**/molecule/**/verify.yml": "ansible"
-        },
-        "files.trimTrailingWhitespace": true,
-        "files.insertFinalNewline": true,
-        "files.trimFinalNewlines": true,
-        "editor.formatOnSave": true,
-        "editor.rulers": [88, 120],
-        "[yaml]": {
-          "editor.defaultFormatter": "redhat.vscode-yaml",
-          "editor.tabSize": 2
-        },
-        "[ansible]": {
-          "editor.tabSize": 2
-        },
-        "[python]": {
-          "editor.defaultFormatter": "ms-python.black-formatter",
-          "editor.tabSize": 4,
-          "editor.codeActionsOnSave": {
-            "source.organizeImports": "explicit"
-          }
-        }
-      }
+      "extensions": ["redhat.ansible", "redhat.vscode-redhat-account"]
     }
-  },
-
-  "postCreateCommand": "bash .devcontainer/post-create.sh",
-  
-  "remoteUser": "root",
-  
-  "mounts": [
-    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ansible,target=/root/.ansible,type=bind,consistency=cached",
-    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
-  ],
-
-  "runArgs": [
-    "--network=host",
-    "--privileged"
-  ],
-
-  "forwardPorts": [],
-
-  "workspaceFolder": "/workspace",
-  "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached"
+  }
 }
