--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,186 +1,16 @@
-# DevWorkspace definition for OpenShift Dev Spaces / Eclipse Che
-# Used for Ansible Collection development on OpenShift
-schemaVersion: 2.2.0
+---
+schemaVersion: 2.2.2
 metadata:
-  name: automation-collection-example
-  version: 1.0.0
-  displayName: Automation Collection Development
-  description: Development environment for Ansible Content Collections
-  tags:
-    - Ansible
-    - Collection
-    - Development
-    - Molecule
-    - Automation
-  projectType: ansible
-  language: yaml
-  provider: Red Hat
-  supportUrl: https://github.com/your-org/rh1_ansible_code_lifecycle
-
-# Parent devfile - use Ansible Creator EE
-parent:
-  uri: https://raw.githubusercontent.com/devfile/registry/main/stacks/ansible/devfile.yaml
-
-# Components - containers, volumes, plugins
+  name: myorg.custom_collection-249bddc2
 components:
-  # Main Ansible development container
-  - name: ansible-tools
+  - name: tooling-container
     container:
-      image: quay.io/ansible/creator-ee:latest
-      memoryLimit: 4Gi
-      memoryRequest: 1Gi
+      image: ghcr.io/ansible/ansible-devspaces:latest
+      memoryRequest: 256M
+      memoryLimit: 6Gi
+      cpuRequest: 250m
       cpuLimit: 2000m
-      cpuRequest: 500m
-      mountSources: true
-      volumeMounts:
-        - name: ansible-cache
-          path: /root/.ansible
-        - name: cache
-          path: /root/.cache
+      args: ["tail", "-f", "/dev/null"]
       env:
-        - name: ANSIBLE_FORCE_COLOR
+        - name: KUBEDOCK_ENABLED
           value: "true"
-      endpoints:
-        - name: health
-          targetPort: 8080
-          exposure: internal
-
-  # Volumes
-  - name: ansible-cache
-    volume:
-      size: 1Gi
-
-  - name: cache
-    volume:
-      size: 2Gi
-
-  # VS Code extensions
-  - name: vscode-ansible
-    plugin:
-      id: redhat/vscode-ansible/latest
-
-  - name: vscode-yaml
-    plugin:
-      id: redhat/vscode-yaml/latest
-
-# Commands - tasks that can be executed
-commands:
-  # Setup commands
-  - id: install-tools
-    exec:
-      label: "Install Development Tools"
-      component: ansible-tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: |
-        pip install --upgrade pip
-        pip install ansible-core ansible-lint ansible-navigator yamllint \
-                    jinja2-cli pre-commit detect-secrets molecule pytest \
-                    molecule-plugins[docker]
-
-        # Install yq
-        VERSION=v4.40.5
-        wget -q https://github.com/mikefarah/yq/releases/download/${VERSION}/yq_linux_amd64 -O /tmp/yq
-        sudo mv /tmp/yq /usr/local/bin/yq
-        sudo chmod +x /usr/local/bin/yq
-        
-        echo "✅ Tools installed successfully"
-      group:
-        kind: build
-        isDefault: false
-
-  - id: setup-precommit
-    exec:
-      label: "Setup Pre-commit Hooks"
-      component: ansible-tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: |
-        if [ -f .pre-commit-config.yaml ]; then
-          pre-commit install
-          pre-commit install --hook-type commit-msg
-          echo "✅ Pre-commit hooks installed"
-        fi
-      group:
-        kind: build
-        isDefault: false
-
-  # Validation commands
-  - id: sanity-test
-    exec:
-      label: "Ansible Sanity Test"
-      component: ansible-tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: ansible-test sanity --docker
-      group:
-        kind: test
-        isDefault: true
-
-  - id: lint-ansible
-    exec:
-      label: "Ansible Lint"
-      component: ansible-tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: ansible-lint
-      group:
-        kind: test
-        isDefault: false
-
-  - id: lint-yaml
-    exec:
-      label: "YAML Lint"
-      component: ansible-tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: yamllint .
-      group:
-        kind: test
-        isDefault: false  - id: lint-all
-    exec:
-      label: "Run All Linters"
-      component: ansible-tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: |
-        echo "Running yamllint..."
-        yamllint . || true
-        echo ""
-        echo "Running ansible-lint..."
-        ansible-lint || true
-        echo ""
-        echo "✅ Linting complete"
-      group:
-        kind: test
-        isDefault: false
-
-  # Molecule commands
-  - id: molecule-test
-    exec:
-      label: "Molecule Test (All Scenarios)"
-      component: ansible-tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: molecule test --all
-      group:
-        kind: run
-        isDefault: false
-
-  # Git commands
-  - id: git-status
-    exec:
-      label: "Git Status"
-      component: ansible-tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: git status
-      group:
-        kind: run
-        isDefault: false
-
-  - id: pre-commit-run
-    exec:
-      label: "Run Pre-commit Checks"
-      component: ansible-tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: pre-commit run --all-files
-      group:
-        kind: test
-        isDefault: false# Events - automatic actions
-events:
-  postStart:
-    - install-tools
-    - setup-precommit
