--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,5 @@ line-length = 100
 
 [tool.pytest.ini_options]
 addopts = ["-vvv", "-n", "2", "--log-level", "WARNING", "--color", "yes"]
-filterwarnings = ['ignore:AnsibleCollectionFinder has already been configured']
+filterwarnings = ["ignore:AnsibleCollectionFinder has already been configured"]
 testpaths = ["tests"]
