--- a/extensions/molecule/database/molecule.yml
+++ b/extensions/molecule/database/molecule.yml
@@ -2,7 +2,7 @@
 dependency:
   name: galaxy
   options:
-    requirements-file: collections/requirements.yml
+    requirements-file: ../provisioners/${PROVISIONER:-podman}/requirements.yml
 driver:
   name: default
   options:
@@ -20,28 +20,16 @@ platforms:
     workingDir: '/tmp'
 provisioner:
   name: ansible
-  # Failing to write the ansible into /.ansible/tmp
   playbooks:
     converge: converge.yml
-    create: ../utils/kubernetes-pod/playbooks/create.yml
-    destroy: ../utils/kubernetes-pod/playbooks/destroy.yml
-    prepare: ../utils/kubernetes-pod/playbooks/prepare.yml
+    create: ../provisioners/${PROVISIONER:-podman}/create.yml
+    destroy: ../provisioners/${PROVISIONER:-podman}/destroy.yml
+    # prepare: ../provisioners/${PROVISIONER:-podman}/prepare.yml
+    # prepare: ../utils/kubernetes-pod/playbooks/prepare.yml
     verify: verify.yml
-  config_options:
-    defaults:
-      remote_tmp: '/tmp'
-      # This just says go back a directory and thats your roles path
-      # You can also provide this via pipeline with something like this
-      # ANSIBLE_ROLES_PATH: $COLLECTION_ROLES
-
-      # COLLECTIONS_PATH: ${PROJECT_SOURCE}
-      # ANSIBLE_ROLES_PATH: ${PROJECT_SOURCE}/${backup_file_molecule_namespace}
   inventory:
-    group_vars:
-      all:
-        backup_file_molecule_namespace: ${DEVWORKSPACE_NAMESPACE}
-        backup_file_molecule_pip_dependencies:
-          - kubernetes
+    links:
+      group_vars: ../provisioners/${PROVISIONER:-podman}/group_vars/
 verifier:
   name: ansible
 scenario:
@@ -51,6 +39,5 @@ scenario:
     - syntax
     - create
     - converge
-    - idempotence
     - verify
 ...
