--- a/extensions/molecule/database/verify.yml
+++ b/extensions/molecule/database/verify.yml
@@ -1,40 +1,59 @@
 ---
 - name: Verify
-  hosts: all
+  hosts: runner
   gather_facts: false
-  connection: kubernetes.core.kubectl
   vars:
     database_server_name: "webapp_prod"
     database_server_user: "webapp_user"
     database_server_password: "SecurePassword123"
+    database_server_user_password: "SecurePassword123"
   tasks:
+
     - name: "FUNCTIONAL TEST: Connect as the new user and create a table"
       community.postgresql.postgresql_query:
         login_user: "{{ database_server_user }}"
-        login_password: "{{ database_server_password }}"
+        login_password: "{{ database_server_user_password }}"
         login_db: "{{ database_server_name }}"
+        host: "{{ db_host }}"
         query: "CREATE TABLE IF NOT EXISTS molecule_verify (id INT);"
+      loop: "{{ groups['database'] }}"
+      loop_control:
+        loop_var: db_host
 
     - name: "FUNCTIONAL TEST: Write data to the new table"
       community.postgresql.postgresql_query:
         login_user: "{{ database_server_user }}"
-        login_password: "{{ database_server_password }}"
+        login_password: "{{ database_server_user_password }}"
         login_db: "{{ database_server_name }}"
+        host: "{{ db_host }}"
         query: "INSERT INTO molecule_verify (id) VALUES (1);"
+      loop: "{{ groups['database'] }}"
+      loop_control:
+        loop_var: db_host
 
     - name: "FUNCTIONAL TEST: Read data back and verify the result"
       community.postgresql.postgresql_query:
         login_user: "{{ database_server_user }}"
-        login_password: "{{ database_server_password }}"
+        login_password: "{{ database_server_user_password }}"
         login_db: "{{ database_server_name }}"
+        host: "{{ db_host }}"
         query: "SELECT COUNT(*) FROM molecule_verify;"
       register: query_result
       changed_when: false
+      loop: "{{ groups['database'] }}"
+      loop_control:
+        loop_var: db_host
 
-    - name: "Assert that one record was found"
+    - name: debug all rowcounts
+      ansible.builtin.debug:
+        msg: "{{ query_result.results | map(attribute='rowcount') | list }}"
+
+    - name: "Assert that every result has rowcount == 1"
       ansible.builtin.assert:
         that:
-          - query_result.query_result[0].count == 1
-        fail_msg: "Verification failed! Expected to find 1 record but found {{ query_result.query_result[0].count }}."
+          - query_result.results | map(attribute='rowcount') | map('int') | list | select('equalto', 1) | length == (query_result.results | length)
+        fail_msg: >-
+          Verification failed! Expected every query result to have rowcount==1,
+          but got: {{ query_result.results | map(attribute='rowcount') | list }}.
         success_msg: "Verification successful! The DB user can connect, write, and read."
 ...
