--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,5 +1,5 @@
 ---
-# This collection is initialized by https://github.com/ansible/ansible-creator 25.8.0
+# This collection is initialized by https://github.com/ansible/ansible-creator 25.10.0
 
 # See https://docs.ansible.com/ansible/latest/dev_guide/collections_galaxy_meta.html
 
@@ -23,9 +23,9 @@ dependencies:
   "containers.podman": ">=1.10.0"
 
 repository: https://github.com/djdanielsson/rh1-custom-collection
-documentation: https://github.com/djdanielsson/rh1-custom-collection/docs
+documentation: https://github.com/djdanielsson/rh1-custom-collection/blob/main/README.md
 homepage: https://github.com/djdanielsson/rh1-custom-collection
-issues: https://github.com/djdanielsson/rh1-custom-collection/issue/tracker
+issues: https://github.com/djdanielsson/rh1-custom-collection/issues
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
