--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
+# TO-DO: add python packages that are required for this collection
 # No external python dependencies required
 # This collection relies on standard library and ansible-core
