Add provisioner environment variable to build config

--- a/.tekton/build-and-test.yml
+++ b/.tekton/build-and-test.yml
@@ -59,3 +59,5 @@ spec:
           value: $(tasks.ansible-galaxy-collection-build.results.collection-bundle)
         - name: molecule-scenario
           value: "all"
+        - name: provisioner-environment-variable
+          value: "kubernetes"
